Atualizando nova página

--- a/Alexandre.html
+++ b/Alexandre.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 <title> Alexandre Oliveira, 23 anos, sou corinthiano</title>
-<link rel="stylesheet" type="text/css" href="CSS/style.css";>
+<link rel="stylesheet" type="text/css" href="css/style.css";>
 </head>
 <body style="background-color:LightGray; text-align:center">
 <div class="navbar">
